# aerobastion

./: NEST.stl  README.md  nest_open_scad.scad
Amandio/: main.py  requirements.txt
amandio/: README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
amandio/app/: globals.css  layout.tsx  page.tsx
amandio/app/api/videos/: route.ts
amandio/app/api/yolo/detect/: route.ts
amandio/backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
amandio/components/dashboard/: aerial-assets.tsx  drone-video-feed.tsx  environmental-kpis.tsx  event-log.tsx  gas-analytics-card.tsx  header.tsx  mission-trigger.tsx  thermal-map.tsx
amandio/frontend/: Dockerfile
amandio/scripts/: install-docker-compose.sh
