[project]
name = "aerobastion-backend"
version = "0.1.0"
description = "Fire detection backend with YOLOv8"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "websockets>=13.0",
]
